changes Table 2, second ex in Introduction and minors

--- a/biblio.bib
+++ b/biblio.bib
@@ -32,7 +32,7 @@
   title = {Decision-Theoretic Elicitation of Generalized Additive Utilities},
   year = {2012},
   publisher = {University of Toronto},
-  url={dl.acm.org/doi/book/10.5555/2519022}
+  url={https://dl.acm.org/doi/book/10.5555/2519022}
 }
 
 @InProceedings{Cailloux2014,
@@ -68,8 +68,7 @@
   Title = {Robust Discrete Optimization and Its Applications},
   Author = {Kouvelis, Panos and Yu, Gang},
   Publisher = {Kluwer},
-  Year = {1997},
-  Address = {Dordrecht}
+  Year = {1997}
 }
 
 @Article{Llamazares2016,
@@ -198,7 +197,7 @@
 	year = {2007},
 	booktitle = {Proc. of AAAI'07},
 	pages = {3–8},
-	url = {dl.acm.org/doi/10.5555/1619645.1619648}
+	url = {https://dl.acm.org/doi/10.5555/1619645.1619648}
 }
 
 @inproceedings{Walsh2009,
@@ -207,7 +206,7 @@
 	year = {2008},
 	booktitle = {Proc. of AAMAS'08},
 	pages = {967–974},
-	url ={dl.acm.org/doi/abs/10.5555/1402298.1402357}
+	url ={https://dl.acm.org/doi/abs/10.5555/1402298.1402357}
 }
 
 
@@ -219,7 +218,7 @@
 	number = {1},
 	journal = {Journal of Artificial Intelligence Research},
 	pages = {161–191},
-	url={dl.acm.org/doi/10.5555/1641503.1641507}
+	doi={10.1613/jair.2606}
 }
 
 @inproceedings{Dey2016,
@@ -228,7 +227,7 @@
 	year = {2016},
 	booktitle = {Proc. of IJCAI'16},
 	pages = {215–221},
-	url={www.ijcai.org/Proceedings/16/Papers/038.pdf}
+	url={https://dl.acm.org/doi/10.5555/3060621.3060652}
 }
 
 @inproceedings{Dey2016_2,
@@ -236,7 +235,7 @@
 	title={Preference Elicitation for Single Crossing Domain},
 	year={2016},
 	pages={222-228},
-	url={www.ijcai.org/Abstract/16/039},
+	url={https://dl.acm.org/doi/10.5555/3060621.3060653},
 	booktitle={Proc. of IJCAI'16}
 }
 
@@ -256,7 +255,7 @@
 	year = {2016},
 	booktitle = {Proc. of IJCAI'16},
 	pages = {236–242},
-	url={www.ijcai.org/Proceedings/16/Papers/041.pdf}
+	url={https://dl.acm.org/doi/10.5555/3060621.3060655}
 }
 
 @article{Dey2018_2,
@@ -266,7 +265,7 @@
 	year={2018},
 	volume={731},
 	pages={36-49},
-	url = {www.sciencedirect.com/science/article/abs/pii/S0304397518302068}
+	doi = {10.1016/j.tcs.2018.03.028}
 }
 
 @inproceedings{Elkind2012,
@@ -275,14 +274,14 @@
 	year = {2012},
 	booktitle = {Proc. AAMAS'12},
 	pages = {627–634},
-	url={dl.acm.org/doi/10.5555/2343776.2343786}
+	url={https://dl.acm.org/doi/10.5555/2343776.2343786}
 }
 
 @inproceedings{Conitzer2011,
 	author={Conitzer, Vincent and Walsh,Toby and Xia,Lirong},
 	title={Dominating Manipulations in Voting with Partial Information},
 	year={2011},
-	url={www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3706},
+	url={https://dl.acm.org/doi/10.5555/2900423.2900525},
 	booktitle={Proc. of AAAI'11},
 }
 
@@ -302,7 +301,7 @@
 	year = {2012},
 	booktitle = {Proc. of AAMAS'12},
 	pages = {635–644},
-	url={dl.acm.org/doi/10.5555/2343776.2343787}
+	url={https://dl.acm.org/doi/10.5555/2343776.2343787}
 }
 
 @article{Giritligil2005,
@@ -321,7 +320,7 @@
 	year = {2019},
 	booktitle = {Proc. of AAMAS'19},
 	pages = {1814–1816},
-	url = {dl.acm.org/doi/10.5555/3306127.3331928}
+	url = {https://dl.acm.org/doi/10.5555/3306127.3331928}
 }
 
 @inproceedings{PrefLib,
